bron figuur toegevoegd

--- a/NL emissies.ipynb
+++ b/NL emissies.ipynb
@@ -395,7 +395,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figuur van Twitter , van Stefan Rahmstorf volgens mij. Lineare emissie-afname tot 2050 is niet voldoende voor Parijs! "
+    "Figuur van Twitter , https://twitter.com/Umweltrat/status/1260910188246245377\n",
+    "\n",
+    "Bijschrift: \n",
+    "> Ein Paris-kompatibles #CO2Budget sollte Maßstab für deutsche und europäische #Klimapolitik sein. Grundlage für deutsches Budget sind Klimaphysik und Bevölkerungsanteil (@IPCC_CH #SR15: 1.5°C anstreben, maximal 1,75°C Paris-kompatibel, 67% Wahrscheinlichkeit).\n",
+    " \n",
+    "Ook hieruit blijkt, een lineare emissie-afname tot 2050 is niet voldoende voor Parijs! "
    ]
   },
   {
