emissie reductie per jaar

--- a/NL emissies.ipynb
+++ b/NL emissies.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Laten we ook de groene rechte lijn berekenen, dat is het pad dat genomen moet worden om binnen het koolstofbudget te blijven voor Parijs, met een lineaire afname per jaar (dat rekent makkelijker dan de andere lijn). "
+    "Laten we nu voor Nederland ook de **rechte, groene lijn** berekenen. Dit is het pad dat genomen moet worden om binnen het koolstofbudget te blijven voor Parijs, met een lineaire afname per jaar (dat rekent makkelijker dan de andere lijn). "
    ]
   },
   {
@@ -581,24 +581,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OK. "
+    "OK.  Nederland moet emissie-vrij zijn in jaar: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nederland moet emissie-vrij zijn in jaar 2038\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2038"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Nederland moet emissie-vrij zijn in jaar {}'.format(years3[-1]))"
+    "years3[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Emissie reductie (als %) nodig per jaar. NB. dit loopt ieder jaar op, omdat het een lineaire afname is. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  5.55555556,   5.88235294,   6.25      ,   6.66666667,\n",
+       "         7.14285714,   7.69230769,   8.33333333,   9.09090909,\n",
+       "        10.        ,  11.11111111,  12.5       ,  14.28571429,\n",
+       "        16.66666667,  20.        ,  25.        ,  33.33333333,\n",
+       "        50.        , 100.        ])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 - np.array(emissies3)[1:] / np.array(emissies3)[:-1]) * 100"
    ]
   },
   {
