klein foutje in de beschrijving (2020 moest 2016 zijn)

--- a/koolstofbudget.ipynb
+++ b/koolstofbudget.ipynb
@@ -1059,7 +1059,8 @@
     "**Aannames**\n",
     "* Mondiale koolstofbudget uit: IPCC SR15, tabel 2.2.\n",
     "* Het koolstofbudget voor Nederland is evenredig met haar bevolking\n",
-    "* Het koolstofbudget wordt \"uitgedeeld\" per 1.1.2020"
+    "* Het koolstofbudget wordt \"uitgedeeld\" per 1.1.2016, kort na het Akkoord van van Parijs\n",
+    "* Het Urgenda-vonnis wordt gehaald, waarmee de emissies in 2020 uitkomen op 166,2 Mton\n"
    ]
   },
   {
